[package]
name = "rustproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
serde_json = "1.0"
serde = "1.0"
serde_yaml = "0.8.7"
csv = "1"
handlebars = "3"
html = "0.5"
kuchiki = "0.7"
html5ever = "0.25"


